applications/alumni-proxy/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: alumni-origin
  labels:
    kubernetes.io/service-name: alumni-origin
addressType: IPv4
ports:
  - name: https
    protocol: TCP
    port: 443
endpoints:
  - addresses:
      - "115.145.150.214"
