applications/alumni-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alumni-origin
spec:
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
