applications/alumni-proxy/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: alumni
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateway-system
      sectionName: alumni-passthrough

    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateway-system
      sectionName: alumni-subdomains-passthrough

  hostnames:
    - "alumni.scg.skku.ac.kr"
    - "admin.alumni.scg.skku.ac.kr"
    - "api.alumni.scg.skku.ac.kr"
    - "test.alumni.scg.skku.ac.kr"

  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: alumni-origin
